--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   provider: ^6.1.4
   shared_preferences: ^2.5.3
+  paymob_payment: ^0.0.1+1
 
 dev_dependencies:
   flutter_test:
