--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.4
   shared_preferences: ^2.5.3
   paymob_payment: ^0.0.1+1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
