--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^3.0.0
   flutter_staggered_animations: ^1.1.1
   animate_gradient: ^0.0.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
