--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   animate_gradient: ^0.0.3
   carousel_slider: ^5.0.0
   google_sign_in: ^6.3.0
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
