--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
   easy_localization: ^3.0.7+1
+  convex_bottom_bar: ^3.2.0
+  printing: ^5.14.2
+  pdf: ^3.11.3
 
 dev_dependencies:
   flutter_test:
@@ -74,11 +77,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
   assets:
     - assets/translations/
     - assets/logo.jpg
     - assets/m.png
     - assets/store_banner.jpg
+    - assets/fonts/Cairo/Cairo-Regular.ttf
+    - assets/fonts/Cairo/Cairo-Bold.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
